# Xkernel

./: .all-cases-locate-ir.sh  .all-cases-run-analysis.sh  .gitignore  AGENTS.md  BBSizePass.cpp  CMakeLists.txt  Makefile  README-wentao.md  README.md  TaintTrackerPass.cpp  Xkernel-Pics.pptx  addr.csv  analyze_symbol_changes.py  bpf_prog.c  build-tests.sh  build.sh  check-diff.py  check_as_diff-v2.py  check_as_diff-v3.py  check_as_diff.py  check_assembly_diff.py  check_assembly_diff_examples.csv  cubic_test.sh  diff.csv  extract-kernel-params.sh  extract_assembly_ranges.py  format.sh  gdb.py  gdb_core.py  gdb_module.py  gen-diff.sh  install.sh  install_cyclictest.sh  kernel-results  locate-const-in-ir.sh  objdump.py  parse_ir_diff.py  patch2sed.py  plot_common.py  plot_env.sh  (+19 more)
.github/: copilot-instructions.md
CaseStudies/: plot_four_combined.py  plot_iouring.py  plot_migr_lat.py  plot_netperf.py  plot_shrink.py  softirq.csv
CaseStudy/: BLK_MAX_REQUEST_COUNT.md  constant.md  details.md
Cases/: summary.md
Experiment/: README.md  constants.md
MACROS/: xkernel_macro_filter.md
UnitTestsCS/: build_cs.py  cmd.sh  cmd_v2.sh  gen.sh  gen_v2.sh  xkernel_table_manager.py
ae/: README.md  common.sh  exp3_shrink_batch.sh  exp6_overhead.sh  exp7_transition.sh  run_all.sh  setup_ssh.sh
background/: nvme_32.txt  nvme_32_cpu.txt  plot_combined.py
bpf/: Makefile  cs_artifact.bpf.h  kfuncs.bpf.h  kprobe.bpf.c  util.bpf.h  x_tune.h  xkernel.bpf.h
bpf_kprobe/: Makefile  dump_kernel_function_assembly.sh  kprobe_loader  kprobe_loader.cc  loader_common.cc  loader_common.h  (+1 more)
(+5436 files in other folders)
